Update FireStation resourses